1998-09-15  Ben Elliston  <bje@cygnus.com>

	* config.guess: Handle strange processor ID assignments on AIX
	machines.  Contributed by Didier Desseaux <didess@infonie.fr>.

Sat Sep 12 16:25:00 1998  Aaron Crane  <aaronc@pobox.com>

	* acgeneral.m4 (AC_CHECK_TYPE): Changed the egrep regex to avoid
	incorrectly assuming that if foobar_t is defined, then so is
	bar_t.
	
Thu Jun 18 12:13:27 1998  Ian Lance Taylor  <ian@cygnus.com>

	* acspecific.m4 (AC_EXEEXT): Correct setting of ac_exeext when
	there is no extension.

Mon Jun  1 12:30:39 1998  Ian Lance Taylor  <ian@cygnus.com>

	* acgeneral.m4 (AC_CHECK_PROG): Set IFS to just ":" when searching
	through PATH.
	(AC_PATH_PROG): Likewise.
	* acspecific.m4 (AC_PROG_INSTALL): Likewise.
	(AC_PROG_CC): On cygwin32, if neither gcc nor cc
	are found, look for cl.
	(AC_PROG_CXX): Look for cl after all other choices.
	* configure: Rebuild.

Thu May 28 18:37:36 1998  Ian Lance Taylor  <ian@cygnus.com>

	* acgeneral.m4 (AC_ACVERSION): Bump to 2.12.2.

	Add support for Visual C++:
	* acgeneral.m4 (ac_exeext, ac_objext): New variables.
	(ac_link): Use ac_exeext.
	(AC_TRY_COMPILER, AC_TRY_LINK, AC_TRY_RUN_NATIVE): Likewise.
	(AC_TRY_CPP): Remove lines from stderr which contain only the name
	of the file.
	(AC_REPLACE_FUNCS): Use ac_objext.
	* acspecific.m4 (AC_PROG_CC): Check whether compiler supports -g
	even if it is not gcc.
	(AC_PROG_CXX): Likewise.
	(AC_PROG_CPP): Try running the compiler with the -nologo option.
	(AC_FUNC_ALLOCA): Check for _MSC_VER.  Use ac_objext.
	(AC_FUNC_MEMCMP): Use ac_objext.
	(AC_STRUCT_ST_BLOCKS): Likewise.
	(AC_OBJEXT): New macro.
	(AC_CYGWIN32, AC_MINGW32, AC_EXEEXT): New macros.
	* configure: Rebuild.

	* Makefile.in (editsh): Substitute for SHELL.
	(Makefile, config.status): Use $(SHELL) when running
	config.status.
	* autoconf.sh: Change initial /bin/sh to @SHELL@.
	* autoheader.sh: Likewise.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* ifnames.sh: Likewise.
